ajustes minuta comportamiento check

--- a/src/app/pages/projects/config/config.component.html
+++ b/src/app/pages/projects/config/config.component.html
@@ -27,7 +27,7 @@
                     </li>
                     <li [ngbNavItem]="2" class="nav-item waves-effect waves-light">
                         <a ngbNavLink class="nav-link" [routerLink]="'/projects/config/'+userData._id+'/installations'">
-                            <span class="d-sm-block"><span class="badge bg-success rounded-circle">2</span> Parte, Obras y Acciones</span>
+                            <span class="d-sm-block"><span class="badge bg-success rounded-circle">2</span> Elementos y actividades</span>
                         </a>
                         <ng-template ngbNavContent>
                             <ng-template [ngTemplateOutlet]="TabContent"></ng-template>
