--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -82,10 +82,10 @@
                                                     <div>
                                                         <p class="fw-medium mb-0">Cumplimiento actual</p>
                                                         <h2 class="mt-4 ff-secondary fw-semibold" style="color: #fff !important;">
-                                                            <span [CountTo]="24" class="counter-value" [from]="0" [duration]="1"></span><span>%</span>
+                                                            <span [CountTo]="avance_evaluacion > 0 ? avance_evaluacion : 0" class="counter-value" [from]="0" [duration]="1"></span><span>{{avance_evaluacion > 0 ? '' : 0}}%</span>
                                                         </h2>
-                                                        <p class="mb-0" style="font-style: italic;"><span class="badge bg-light text-success mb-0"><!--[ngClass]=" { 'text-danger': profit === 'down'}"-->
-                                                                19 %
+                                                        <p class="mb-0" style="font-style: italic;"><span class="badge bg-light mb-0" [ngClass]=" { 'text-danger': avance_evaluacion < 25, 'text-warning': avance_evaluacion > 25 && avance_evaluacion < 75, 'text-success': avance_evaluacion > 75}">
+                                                                {{avance_evaluacion}} %
                                                             </span> Última evaluación</p>
                                                     </div>
                                                     <div>
@@ -180,7 +180,7 @@
                                                                             <div class="col-lg-2 col">
                                                                                 <div class="row text-muted text-center">
                                                                                     <div class="col-12 border-end border-end-dashed">
-                                                                                        <h5 class="mb-1">0</h5>
+                                                                                        <h5 class="mb-1">{{v.total_cuerpos ? v.total_cuerpos : 0}}</h5>
                                                                                         <p class="text-muted mb-0">Cuerpos legales Vinculados</p>
                                                                                     </div>
                                                                                 </div>
@@ -189,7 +189,7 @@
                                                                             <div class="col-lg-2 col">
                                                                                 <div class="row text-muted text-center">
                                                                                     <div class="col-12 border-end border-end-dashed">
-                                                                                        <h5 class="mb-1">0</h5>
+                                                                                        <h5 class="mb-1">{{v.total_articulos ? v.total_articulos : 0}}</h5>
                                                                                         <p class="text-muted mb-0">Artículos Vinculados</p>
                                                                                     </div>
                                                                                 </div>
@@ -197,7 +197,7 @@
 
                                                                             <div class="col-lg-2 col">
                                                                                 <div class="progress progress-xl">
-                                                                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                                                                                    <div class="progress-bar" [ngClass]="{'bg-danger': v.avance < 25, 'bg-warning': v.avance > 25 && v.avance < 75, 'bg-success': v.avance > 75 }" role="progressbar" [style]="v.avance > 0 ? 'width:'+v.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{v.avance}}%</div>
                                                                                 </div>
                                                                             </div>
 
