--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -10,7 +10,10 @@
         <!--<h5 class="mb-3">Header Justify Tabs</h5>-->
         <div class="card">
             <div class="card-header align-items-xl-center d-xl-flex">
-                <p class="text-muted flex-grow-1 mb-xl-0"><!--Use <code>card-header-pills</code> class to create header justify tab.--></p>
+                <div class="flex-grow-1 mb-xl-0">
+                    <button class="btn btn-primary btn-label waves-effect left waves-light" routerLink="/projects/{{project_id}}/identification"><i class="ri-arrow-left-line label-icon align-middle fs-16"></i> Volver a identificación</button>
+                </div>
+                <!--<p class="text-muted flex-grow-1 mb-xl-0">Use <code>card-header-pills</code> class to create header justify tab.</p>-->
                 <div class="flex-shrink-0">
                   <ul ngbNav #Header="ngbNav" [activeId]="1" class="nav nav-pills card-header-pills">
                     <li [ngbNavItem]="1">
