bagde no evaluado

--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -205,7 +205,7 @@
                                                                             </div>
 
                                                                             <div class="col-lg-1 col">
-                                                                                <span class="badge text-bg-warning">En evaluación</span>
+                                                                                <span class="badge text-bg-danger">No evaluado</span>
                                                                             </div>
                                                                         </div>
                                                                     </div>
