--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -42,7 +42,7 @@
                 <div class="d-md-flex justify-content-sm-end gap-2">
                     <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" data-choices data-choices-search-false
                                 id="choices-priority-input2">
-                                <option value="" selected>Seleccione Cuerpo legal</option>
+                                <option value="" selected>Seleccione Cumplimiento</option>
                                 <option value="CUMPLE">Cumple</option>
                                 <option value="CUMPLE PARCIALMENTE">Cumple parcial</option>
                                 <option value="NO CUMPLE">No cumple</option>
